# ux-primitives

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Makefile  Makefile.toml  README.md  SECURITY.md  book.toml  chapter_1.html  css.md  index.html  print.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: canvas.rs  color.rs  geom.rs  lib.rs  math.rs  point2d.rs  rect.rs  size2d.rs  style.rs  text.rs  vector2d.rs  vector3d.rs
src/canvas/: canvas.rs  direction.rs  image.rs  mod.rs  style.rs  text_metrics.rs
src/color/: README.md  adjust.rs  alpha.rs  base.rs  cmy.rs  cmyk.rs  convert.rs  css.rs  hsl.rs  hsv.rs  lab.rs  marker.rs  mod.rs  palette.rs  rgb.rs  rgba.rs  round.rs  test_utils.rs  to_hex_string.rs  unicolor.rs  utils.rs  xyz.rs
src/color/convert/: from_cmyk.rs  from_color.rs  from_hsl.rs  from_hsv.rs  from_lab.rs  from_rgb.rs  from_rgba.rs  from_xyz.rs  mod.rs  test_utils.rs  to_hex_string.rs
src/colorspace/: adjust.rs  alpha.rs  base.rs  cmy.rs  cmyk.rs  css.rs  hsl.rs  hsv.rs  mod.rs  rgb.rs  rgba.rs  round.rs  test_utils.rs  utils.rs  xyz.rs
src/colorspace/convert/: from_cmy.rs  from_cmyk.rs  from_color.rs  from_hsl.rs  from_hsv.rs  from_lab.rs  from_rgb.rs  from_rgba.rs  from_xyz.rs  mod.rs  test_utils.rs  to_hex_string.rs
src/colospace/: alpha.rs  cmyk.rs  css.rs  hsv.rs  lab.rs  mod.rs  rgba.rs  utils.rs  xyz.rs
src/colospace/convert/: from_cmy.rs  from_color.rs  from_hsl.rs  from_hsv.rs  from_rgba.rs  mod.rs  test_utils.rs  to_hex_string.rs
src/datatable/: mod.rs
src/foundation/: box2d.rs  box3d.rs  image.rs  mod.rs  point3d.rs  rect.rs  size2d.rs  size3d.rs  style.rs  text.rs  vector2d.rs  vector3d.rs
src/foundation/colorschemes/: analogous.rs  complementary.rs  compound.rs  flipped_compound.rs  mod.rs  monochrome.rs  split_complementary.rs  tetrad.rs  triad.rs
src/foundation/colorspace/: adjust.rs  alpha.rs  base.rs  cmy.rs  cmyk.rs  convert.rs  css.rs  hsl.rs  hsv.rs  lab.rs  marker.rs  mod.rs  rgb.rs  rgba.rs  round.rs  test_utils.rs  to_hex_string.rs  utils.rs  xyz.rs
src/math/: mod.rs
src/prelude/: canvas.rs  color.rs  mod.rs
src/prelude/enums/: agenda.rs  audio_channel.rs  full_screen.rs  joypad_button.rs  joypad_touch.rs  key.rs  message.rs  mod.rs  mouse_button.rs  mouse_cursor.rs  overlay_button.rs  scene.rs  text_align.rs  text_style.rs
src/prelude/traits/: agenda_manager.rs  asset_manager.rs  asset_manager_process.rs  audio_manager.rs  disposable.rs  encrypter.rs  engine_factory.rs  (+28 more)
src/text/: mod.rs
