[package]
name = "ux-primitives"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>", "Maksim Makarov <pr0n1x@yandex.ru>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-primitives"
repository = "https://github.com/angular-rust/ux-primitives"
documentation = "https://docs.rs/ux-primitives"
description = "Graphics Primitives for Angular Rust"
keywords = ["canvas", "color", "color-spaces", "color-conversion"]
categories = ["data-structures"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "primitives"

[features]
canvas = ["euclid", "lyon_geom", "lyon_path"]
geom = ["euclid", "lyon_geom", "lyon_path"]
color_from_css = []
color_quantization = []

[dependencies]
intmap = "0.7"
lyon_geom = { version = "0.17", optional = true }
lyon_path = { version = "0.17", optional = true }
euclid = { version = "0.22", optional = true }
lazy_static = "1.4.0"

[dev-dependencies]
libmath = "0.2.1"
