[package]
name = "ux-primitives"
version = "0.1.4"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-primitives"
repository = "https://github.com/angular-rust/ux-primitives"
documentation = "https://docs.rs/ux-primitives"
description = "Graphics Primitives for Angular Rust"
keywords = ["canvas", "color", "color-spaces", "color-conversion"]
categories = ["data-structures"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "primitives"

[features]
color_from_css = []
color_quantization = []
experimental = []

[dependencies]
intmap = "0.7"
lazy_static = "1.4.0"
bytes = "1.0"
num-traits = "0.2.14"
# cgmath = "0.18"

[dev-dependencies]
libmath = "0.2.1"
